[package]
name = "toy-petshop"
description = "first gotham application"
version = "0.1.0"
authors = ["miyamoen <akihito.biblioteca@gmail.com>"]

[dependencies]
gotham = "0.2"
gotham_derive = "0.2"
gotham_serde_json_body_parser = "0.2"

serde = "1"
serde_json = "1"
serde_derive = "1"

hyper = "0.11"
futures = "0.1"
mime = "0.3"

log = "0.4"
simplelog = "0.5"
dotenv = "0.11"

diesel = { version = "1", features = ["postgres"] }
r2d2-diesel = "1"
r2d2 = "0.8"
